--- a/ting.html
+++ b/ting.html
@@ -160,6 +160,9 @@
               <a href="https://www.retromessa.no">Retromessa.no</a>
             </li>
             <li>
+              <a href="https://localghost.dev">Localghost.dev</a>
+            </li>
+            <li>
               <a href="https://jonhofsli.no">Jonhofsli.no</a>
             </li>
           </ul>
