--- a/ting.html
+++ b/ting.html
@@ -165,6 +165,9 @@
             <li>
               <a href="https://jonhofsli.no">Jonhofsli.no</a>
             </li>
+            <li>
+              <a href="https://jpwiig.dev">Jpwiig.dev</a>
+            </li>
           </ul>
         </div>
       </div>
