--- a/articles.html
+++ b/articles.html
@@ -46,7 +46,11 @@
     <div class="clouds">
       <div class="cloud cloud--1"></div>
       <div class="cloud cloud--2"></div>
-      <div class="cloud cloud--3"></div>
+      <button
+        id="possum-button"
+        class="cloud cloud--3"
+        aria-label="Klikk for å åpne et bilde"
+      ></button>
       <div class="cloud cloud--4"></div>
       <div class="cloud cloud--5"></div>
       <div class="cloud cloud--6"></div>
@@ -61,7 +65,11 @@
         <div class="star star--2"></div>
       </div>
       <div class="star__container">
-        <div class="star star--3"></div>
+        <button
+          id="possum-button"
+          class="star star--3"
+          aria-label="Klikk for å åpne et bilde"
+        ></button>
       </div>
       <div class="star__container">
         <div class="star star--4"></div>
@@ -77,6 +85,15 @@
       </div>
       <div class="star__container">
         <div class="star star--8"></div>
+      </div>
+    </div>
+
+    <div class="window window--white" id="possum">
+      <div class="window__top window__top--pink">
+        <button class="window__close-button">✖</button>
+      </div>
+      <div class="window__content">
+        <img src="images/pungrotte.jpg" alt="Bilde av en pungrotte" />
       </div>
     </div>
 
