--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
                 >Ting og tang 💅</a
               >
             </li>
+            <li>
+              <a
+                target="_blank"
+                href="https://medium.com/@elisekristiansen"
+                class="h3 menu-link"
+                >Blogg 👩‍💻</a
+              >
+            </li>
           </ul>
         </nav>
         <button id="theme-toggle" class="action-button action-button--pink">
