Added an article

--- a/articles.html
+++ b/articles.html
@@ -227,6 +227,18 @@
               </a>
             </li>
             <li>
+              Kode24 - Kvinnedagen 2025:
+              <a
+                href="https://www.kode24.no/artikkel/gratulerer-med-kvinnedagen-da/82792115"
+                >Gratulerer med kvinnedagen, da</a
+              >
+              <a
+                href="https://medium.com/@elisekristiansen/gratulerer-med-kvinnedagen-da-95d7947f342d"
+              >
+                (Finnes også på medium.com</a
+              >
+            </li>
+            <li>
               Kode24 - Kvinnedagen 2022:
               <a
                 href="https://www.kode24.no/artikkel/vi-ma-slutte-a-omtale-utviklere-som-nerder-og-programmering-som-livsstil/75551092"
