--- a/articles.html
+++ b/articles.html
@@ -352,6 +352,15 @@
                 overholde - Lightning Talk (10 min)
               </a>
             </li>
+            <li>
+              Cloud Native Day Oslo 2025:
+              <a
+                href="https://cloud-native-day-oslo-2025.sessionize.com/session/779527"
+              >
+                Hvordan skyteknologi gjør Universell Utforming enklere å
+                overholde - Lightning Talk (10 min)
+              </a>
+            </li>
           </ul>
           <h3>Podcast</h3>
           <ul>
