--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
       </div>
     </div>
     <header class="homepage__header window window--pink">
+      <h1></h1>
+
+      <h2 style="color: white">Hei</h2>
+
       <div class="window__top window__top--purple">
         <button class="window__close-button">✖</button>
       </div>
