--- a/articles.html
+++ b/articles.html
@@ -66,7 +66,7 @@
       </div>
       <div class="star__container">
         <button
-          id="possum-button"
+          id="possum-button-star"
           class="star star--3"
           aria-label="Klikk for å åpne et bilde"
         ></button>
