Added darkmode button back to norwegian site

--- a/articles.html
+++ b/articles.html
@@ -41,6 +41,7 @@
       href="images/favicon/favicon-16x16.png"
     />
     <script src="script.js"></script>
+    <script src="script.js_no"></script>
   </head>
   <body class="articles">
     <div class="clouds">
