--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       href="images/favicon/favicon-16x16.png"
     />
     <script src="script.js"></script>
+    <script src="script.js_no"></script>
   </head>
   <body>
     <div class="clouds">
