--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
       href="images/favicon/favicon-16x16.png"
     />
     <script src="script.js"></script>
+    <script src="script.js_no"></script>
   </head>
   <body class="about">
     <div class="clouds">
