--- a/bariant.html
+++ b/bariant.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <script src="script.js"></script>
+    <script src="script.js_no"></script>
   </head>
   <body>
     <div class="clouds">
