Deploy of really bad code

--- a/en/index.html
+++ b/en/index.html
@@ -131,6 +131,11 @@
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Welcome to Elises site 🦄</h1>
+        <h1></h1>
+
+        <div style="background-color: lavender">
+          <h2 style="color: white">Hey</h2>
+        </div>
       </div>
     </header>
     <div class="window window--white window--small easter-egg-button-div">
