Added languagelink and removed bad code

--- a/about.html
+++ b/about.html
@@ -120,6 +120,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
+        <a href="/en/about.html" class="h5 language-link">Switch to english</a>
       </div>
     </div>
 
