--- a/articles.html
+++ b/articles.html
@@ -138,6 +138,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
+        <a href="/en/articles" class="h5 language-link">Switch to english</a>
       </div>
     </div>
     <div class="window window--pink window--header">
