--- a/en/articles.html
+++ b/en/articles.html
@@ -140,6 +140,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
+        <a href="/articles" class="h5 language-link">Switch to norwegian</a>
       </div>
     </div>
     <div class="window window--pink window--header">
