--- a/en/index.html
+++ b/en/index.html
@@ -123,6 +123,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
+        <a href="/" class="h5 language-link">Switch to norwegian</a>
       </div>
     </div>
     <header class="homepage__header window window--pink">
@@ -131,11 +132,6 @@
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Welcome to Elises site 🦄</h1>
-        <h1></h1>
-
-        <div style="background-color: lavender">
-          <h2 style="color: white">Hey</h2>
-        </div>
       </div>
     </header>
     <div class="window window--white window--small easter-egg-button-div">
