--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
+        <a href="/en" class="h5 language-link">Switch to english</a>
       </div>
     </div>
     <header class="homepage__header window window--pink">
