--- a/en/about.html
+++ b/en/about.html
@@ -119,6 +119,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
+        <a href="/about" class="h5 language-link">Switch to norwegian</a>
       </div>
     </div>
 
