--- a/ting.html
+++ b/ting.html
@@ -121,6 +121,7 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
+        <a href="/en/ting" class="h5 language-link">Switch to english</a>
       </div>
     </div>
     <div class="window window--pink window--header">
