--- a/en/about.html
+++ b/en/about.html
@@ -119,7 +119,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
-        <a href="/about" class="h5 language-link">Switch to norwegian</a>
+        <a href="/about" class="h5 language-link" target="_self"
+          >Switch to norwegian</a
+        >
       </div>
     </div>
 
@@ -166,11 +168,12 @@
           </nav>
           <h2>Buzzwords</h2>
           <p>
-            Har til nå utviklet i vue, svelte, react og litt for mye jquery, og
-            har fått bruke CMS'ene Sanity, Wagtail, Umbraco, eZ Publish og eZ
-            Platform. Har god erfaring med rammeverk som tailwind, bootstrap og
-            foundation, og har jobbet mot designskisser i Figma og Invision. Jeg
-            er også glad i universell utforming.
+            I've worked with Vue, Svelte, React, and a bit too much jQuery. I've
+            also had the chance to use CMSs like Sanity, Wagtail, Umbraco, eZ
+            Publish, and eZ Platform. I have solid experience with frameworks
+            like Tailwind, Bootstrap, and Foundation, and I’ve worked closely
+            with design mockups in Figma and InVision. I also have a strong
+            interest in accessibility.
           </p>
         </div>
       </div>
