--- a/en/index.html
+++ b/en/index.html
@@ -78,7 +78,6 @@
         <div class="star star--8"></div>
       </div>
     </div>
-
     <div
       class="action-button action-button--white menu-button action-button--shadow-pink"
     >
@@ -123,7 +122,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
-        <a href="/" class="h5 language-link">Switch to norwegian</a>
+        <a href="/" class="h5 language-link" target="_self"
+          >Switch to norwegian</a
+        >
       </div>
     </div>
     <header class="homepage__header window window--pink">
