--- a/about.html
+++ b/about.html
@@ -120,7 +120,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
-        <a href="/en/about.html" class="h5 language-link">Switch to english</a>
+        <a href="/en/about" class="h5 language-link" target="_self"
+          >Switch to english</a
+        >
       </div>
     </div>
 
