Added more links to ting

--- a/en/ting.html
+++ b/en/ting.html
@@ -182,6 +182,11 @@
             <li>
               <a href="https://jpwiig.dev">Jpwiig.dev</a>
             </li>
+            <li>
+              <a href="https://90s-ai.vercel.app"
+                >https://90s-ai.vercel.app/welcome</a
+              >
+            </li>
           </ul>
         </div>
       </div>
