--- a/ting.html
+++ b/ting.html
@@ -181,9 +181,7 @@
               <a href="https://jpwiig.dev">Jpwiig.dev</a>
             </li>
             <li>
-              <a href="https://90s-ai.vercel.app"
-                >https://90s-ai.vercel.app/welcome</a
-              >
+              <a href="https://90s-ai.vercel.app">90s-ai.vercel.app</a>
             </li>
           </ul>
         </div>
