Added talks to talking list

--- a/articles.html
+++ b/articles.html
@@ -388,6 +388,13 @@
                 Simplifying Accessibility with Cloud Technology (10 min)
               </a>
             </li>
+            <li>
+              React Norway 2025:
+              <a href="https://reactnorway.com/">
+                Ten Reasons Your Application Isn't Accessible and What You Can
+                Do About It (20 min)
+              </a>
+            </li>
           </ul>
           <h3>Podcast</h3>
           <ul>
