--- a/en/articles.html
+++ b/en/articles.html
@@ -367,6 +367,28 @@
                 overholde - Lightning Talk (10 min)
               </a>
             </li>
+            <li>
+              Refill Stockholm 2025:
+              <a href="https://www.youtube.com/watch?v=BGZ1BoOmeW4">
+                Ten Reasons Your Application Isn't Accessible and What You Can
+                Do About It (Video - 20 min)
+              </a>
+            </li>
+            <li>
+              NCD Oslo 2025:
+              <a
+                href="https://ndcoslo.com/agenda/lightning-talks-3-05pj/0btzlt85kv6"
+              >
+                Simplifying Accessibility with Cloud Technology (10 min)
+              </a>
+            </li>
+            <li>
+              React Norway 2025:
+              <a href="https://reactnorway.com/">
+                Ten Reasons Your Application Isn't Accessible and What You Can
+                Do About It (20 min)
+              </a>
+            </li>
           </ul>
           <h3>Podcast</h3>
           <ul>
