Added pop animation to clouds and stars

--- a/articles.html
+++ b/articles.html
@@ -44,19 +44,36 @@
     <script src="script_no.js"></script>
   </head>
   <body class="articles">
+
     <div class="clouds">
-      <div class="cloud cloud--1"></div>
-      <div class="cloud cloud--2"></div>
-      <button
+      <div class="cloud__container">
+        <div class="cloud cloud--1"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--2"></div>
+      </div>
+      <div class="cloud__container">
+        <button
         id="possum-button"
         class="cloud cloud--3"
         aria-label="Klikk for å åpne et bilde"
       ></button>
-      <div class="cloud cloud--4"></div>
-      <div class="cloud cloud--5"></div>
-      <div class="cloud cloud--6"></div>
-      <div class="cloud cloud--7"></div>
-      <div class="cloud cloud--8"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--4"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--5"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--6"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--7"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--8"></div>
+      </div>
     </div>
     <div class="stars">
       <div class="star__container">
