--- a/en/ting.html
+++ b/en/ting.html
@@ -45,14 +45,30 @@
   </head>
   <body class="articles">
     <div class="clouds">
-      <div class="cloud cloud--1"></div>
-      <div class="cloud cloud--2"></div>
-      <div class="cloud cloud--3"></div>
-      <div class="cloud cloud--4"></div>
-      <div class="cloud cloud--5"></div>
-      <div class="cloud cloud--6"></div>
-      <div class="cloud cloud--7"></div>
-      <div class="cloud cloud--8"></div>
+      <div class="cloud__container">
+        <div class="cloud cloud--1"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--2"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--3"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--4"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--5"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--6"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--7"></div>
+      </div>
+      <div class="cloud__container">
+        <div class="cloud cloud--8"></div>
+      </div>
     </div>
     <div class="stars">
       <div class="star__container">
