Added boring button

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
+        <button id="simple-mode-button" class="action-button action-button--white">
+          <span class="action-button__content">Kjedelig modus</span>
+        </button>
         <a href="/en" class="h5 language-link" target="_self"
           >Switch to english</a
         >
