--- a/articles.html
+++ b/articles.html
@@ -155,6 +155,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Bytt tema</span>
         </button>
+        <button id="simple-mode-button" class="action-button action-button--white">
+          <span class="action-button__content">Kjedelig modus</span>
+        </button>
         <a href="/en/articles" class="h5 language-link" target="_self"
           >Switch to english</a
         >
