--- a/en/about.html
+++ b/en/about.html
@@ -135,6 +135,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
+        <button id="simple-mode-button" class="action-button action-button--white">
+          <span class="action-button__content">Kjedelig modus</span>
+        </button>
         <a href="/about" class="h5 language-link" target="_self"
           >Switch to norwegian</a
         >
