--- a/en/index.html
+++ b/en/index.html
@@ -138,6 +138,9 @@
         <button id="theme-toggle" class="action-button action-button--pink">
           <span class="action-button__content">Switch theme</span>
         </button>
+        <button id="simple-mode-button" class="action-button action-button--white">
+          <span class="action-button__content">Kjedelig modus</span>
+        </button>
         <a href="/" class="h5 language-link" target="_self"
           >Switch to norwegian</a
         >
