Added missing aria label to button

--- a/articles.html
+++ b/articles.html
@@ -108,7 +108,7 @@
 
     <div class="window window--white" id="possum">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk modal">✖</button>
       </div>
       <div class="window__content">
         <img src="images/pungrotte.jpg" alt="Bilde av en pungrotte" />
@@ -121,7 +121,7 @@
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk meny">✖</button>
       </div>
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
@@ -165,7 +165,7 @@
     </div>
     <div class="window window--pink window--header">
       <div class="window__top window__top--lilac">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk modal">✖</button>
       </div>
       <div class="window__content window__content--medium">
         <h1 class="about__title">Artikler og foredrag</h1>
@@ -174,7 +174,7 @@
     <main class="grid grid--two-columns">
       <div class="grid__item window window--pink">
         <div class="window__top window__top--lilac">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Lukk modal">✖</button>
         </div>
         <div class="window__content window__content--medium">
           <h2>Tekster</h2>
@@ -355,7 +355,7 @@
       </div>
       <div class="grid__item window window--white">
         <div class="window__top window__top--pink">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Lukk modal">✖</button>
         </div>
         <div class="window__content window__content--big">
           <h2>Prating</h2>
