--- a/bariant.html
+++ b/bariant.html
@@ -62,7 +62,7 @@
 
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk modal">✖</button>
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title h3">
