--- a/en/about.html
+++ b/en/about.html
@@ -99,7 +99,7 @@
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close menu">✖</button>
       </div>
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
@@ -147,7 +147,7 @@
     <main class="grid grid--two-columns">
       <div class="grid__item window window--pink">
         <div class="window__top window__top--lilac">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Close modal">✖</button>
         </div>
         <div class="window__content window__content--medium">
           <h1 class="about__title">About me</h1>
@@ -198,14 +198,14 @@
       </div>
       <div class="grid__item window window--white">
         <div class="window__top window__top--pink">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Close modal">✖</button>
         </div>
         <div class="window__content">
           <img src="../images/bilde_av_meg_4.jpg" alt="Image of me" />
         </div>
         <div class="window window--white window--absolute">
           <div class="window__top window__top--pink">
-            <button class="window__close-button">✖</button>
+            <button class="window__close-button" aria-label="Close modal">✖</button>
           </div>
           <div class="window__content">
             <img src="../images/bilde_av_meg_2.jpg" alt="Image of me" />
@@ -213,7 +213,7 @@
         </div>
         <div class="window window--white window--absolute">
           <div class="window__top window__top--pink">
-            <button class="window__close-button">✖</button>
+            <button class="window__close-button" aria-label="Close modal">✖</button>
           </div>
           <div class="window__content">
             <img src="../bilde_av_meg.jpg" alt="Image of me" />
@@ -223,7 +223,7 @@
     </main>
     <div class="window window--white window--small pizza-egg-button-div">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content pizza-egg-window">
         <div class="action-button action-button--pink">
@@ -239,7 +239,7 @@
     </div>
     <div class="window window--white" id="pizza-egg">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content">
         <img
