--- a/en/index.html
+++ b/en/index.html
@@ -102,7 +102,7 @@
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close menu">✖</button>
       </div>
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
@@ -148,7 +148,7 @@
     </div>
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Welcome to Elises site 🦄</h1>
@@ -156,7 +156,7 @@
     </header>
     <div class="window window--white window--small easter-egg-button-div">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content">
         <div
@@ -172,7 +172,7 @@
 
     <div class="homepage__header window window--white" id="easter-egg">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content">
         <img
