--- a/en/articles.html
+++ b/en/articles.html
@@ -108,7 +108,7 @@
 
     <div class="window window--white" id="possum">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close menu">✖</button>
       </div>
       <div class="window__content">
         <img src="../images/pungrotte.jpg" alt="Image of possum" />
@@ -121,7 +121,7 @@
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
@@ -167,7 +167,7 @@
     </div>
     <div class="window window--pink window--header">
       <div class="window__top window__top--lilac">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content window__content--medium">
         <h1 class="about__title">Articles and talks</h1>
@@ -176,7 +176,7 @@
     <main class="grid grid--two-columns">
       <div class="grid__item window window--pink">
         <div class="window__top window__top--lilac">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Close modal">✖</button>
         </div>
         <div class="window__content window__content--medium">
           <h2>Texts</h2>
@@ -349,7 +349,7 @@
       </div>
       <div class="grid__item window window--white">
         <div class="window__top window__top--pink">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Close modal">✖</button>
         </div>
         <div class="window__content window__content--big">
           <h2>Talking</h2>
