--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk meny">✖</button>
       </div>
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
@@ -150,7 +150,7 @@
     </div>
     <header class="homepage__header window window--pink">
       <div class="window__top window__top--purple">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk modal">✖</button>
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
@@ -158,7 +158,7 @@
     </header>
     <div class="window window--white window--small easter-egg-button-div">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk modal">✖</button>
       </div>
       <div class="window__content">
         <div
@@ -174,7 +174,7 @@
 
     <div class="homepage__header window window--white" id="easter-egg">
       <div class="window__top window__top--pink">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk modal">✖</button>
       </div>
       <div class="window__content">
         <img
