--- a/ting.html
+++ b/ting.html
@@ -103,7 +103,7 @@
 
     <div class="window window--blue" id="main-menu">
       <div class="window__top window__top--yellow">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Lukk meny">✖</button>
       </div>
       <div class="window__content window__content--small">
         <nav aria-label="main-menu">
@@ -147,7 +147,7 @@
     </div>
     <div class="window window--pink window--header">
       <div class="window__top window__top--lilac">
-        <button class="window__close-button">✖</button>
+        <button class="window__close-button" aria-label="Close modal">✖</button>
       </div>
       <div class="window__content window__content--medium">
         <h1 class="about__title">Ting og tang</h1>
@@ -156,7 +156,7 @@
     <main class="grid grid--two-columns">
       <div class="grid__item window window--pink">
         <div class="window__top window__top--lilac">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Close modal">✖</button>
         </div>
         <div class="window__content window__content--medium">
           <h2>Linker</h2>
@@ -207,7 +207,7 @@
       </div>
       <div class="grid__item window window--white">
         <div class="window__top window__top--pink">
-          <button class="window__close-button">✖</button>
+          <button class="window__close-button" aria-label="Close modal">✖</button>
         </div>
         <div class="window__content window__content--medium">
           <h2>Badges</h2>
