Deploy of really bad code

--- a/index.html
+++ b/index.html
@@ -154,6 +154,18 @@
       </div>
       <div class="window__content window__content--big">
         <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
+        <h1></h1>
+	      <img src="images/test_image.png">
+        <div style="background-color: lightcyan">
+          <h2 style="color: white">Tekst med dårlig kontrast</h2>
+        </div>
+        <div style="background-color: white">
+          <h2 style="color: PaleVioletRed">
+            Også tekst med dårlig konstrast
+          </h2>
+        </div>
+
+
       </div>
     </header>
     <div class="window window--white window--small easter-egg-button-div">
