Added talk to list of talks

--- a/en/articles.html
+++ b/en/articles.html
@@ -409,6 +409,12 @@
                 Do About It (20 min)
               </a>
             </li>
+            <li>
+              JavaZone 2025:
+              <a href="https://vimeo.com/1115501609">
+                Cloud Technology + Accessibility = ❤️ (20 min) (In norwegian)
+              </a>
+            </li>
           </ul>
           <h3>Podcast</h3>
           <ul>
