--- a/en/index.html
+++ b/en/index.html
@@ -139,7 +139,7 @@
           <span class="action-button__content">Switch theme</span>
         </button>
         <button id="simple-mode-button" class="action-button action-button--white">
-          <span class="action-button__content">Kjedelig modus</span>
+          <span class="action-button__content">Boring mode</span>
         </button>
         <a href="/" class="h5 language-link" target="_self"
           >Switch to norwegian</a
