--- a/articles.html
+++ b/articles.html
@@ -421,6 +421,13 @@
                 Cloud Technology + Accessibility = ❤️ (20 min)
               </a>
             </li>
+            <li>
+              Trondheim Developer Conferene 2025:
+              <a href="https://2025.trondheimdc.no/program/">
+                Skyteknologi + Universell utforming = ❤️ (40 min)
+              </a>
+              <p><a href="presentations/Hvordan skyteknologi gjør Universell Utforming enklere å overholde - 40min.pdf">Last ned presentasjonen her</a></p>
+            </li>
           </ul>
           <h3>Podcast</h3>
           <ul>
