--- a/articles.html
+++ b/articles.html
@@ -426,7 +426,7 @@
               <a href="https://2025.trondheimdc.no/program/">
                 Skyteknologi + Universell utforming = ❤️ (40 min)
               </a>
-              <p><a href="presentations/Hvordan skyteknologi gjør Universell Utforming enklere å overholde - 40min.pdf">Last ned presentasjonen her</a></p>
+              <p><a href="presentations/skyteknologiuuherte40min.pdf">Last ned presentasjonen her</a></p>
             </li>
           </ul>
           <h3>Podcast</h3>
