--- a/ting.html
+++ b/ting.html
@@ -202,6 +202,9 @@
             <li>
               <a href="https://90s-ai.vercel.app">90s-ai.vercel.app</a>
             </li>
+            <li>
+              <a href="https://simenskriver.no">Simenskriver.no</a>
+            </li>
           </ul>
         </div>
       </div>
