--- a/articles.html
+++ b/articles.html
@@ -437,6 +437,12 @@
                 >AI og inkludering med Elise Kristiansen</a
               >
             </li>
+            <li>
+              Kortslutning:
+              <a href="https://open.spotify.com/episode/5qGSI6Q40Fz9iLe94I2EIN?si=1V6pvj3OSjiRJS-mVLmWOg"
+                >Kortslutningsrådet - Live fra TDC 2025</a
+              >
+            </li>
           </ul>
           <h3>Offentlig krangling</h3>
           <ul>
