--- a/articles.html
+++ b/articles.html
@@ -423,7 +423,7 @@
             </li>
             <li>
               Trondheim Developer Conferene 2025:
-              <a href="https://2025.trondheimdc.no/program/">
+              <a href="https://www.youtube.com/watch?v=3i54XV7CC1k&t=1657s">
                 Skyteknologi + Universell utforming = ❤️ (40 min)
               </a>
               <p><a href="presentations/skyteknologiuuherte40min.pdf">Last ned presentasjonen her</a></p>
