--- a/ting.html
+++ b/ting.html
@@ -205,6 +205,9 @@
             <li>
               <a href="https://simenskriver.no">Simenskriver.no</a>
             </li>
+            <li>
+              <a href="https://mib.im/">mib.im</a>
+            </li>
           </ul>
         </div>
       </div>
