--- a/about.html
+++ b/about.html
@@ -184,6 +184,14 @@
                   >@</a
                 >
               </li>
+              <li>
+                <a
+                  aria-label="Instagram-link"
+                  class="some-links__link"
+                  href="https://www.instagram.com/frkfrontend/"
+                  ><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagramlogo" /></a
+                >
+              </li>
             </ul>
           </nav>
           <h2>Buzzwords</h2>
