--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
         <div class="window__content window__content--medium">
           <h1 class="about__title">Om meg</h1>
           <p>
-            Hallo! Jeg er Elise og jeg har jobbet som utvikler i sju år, med
+            Hallo! Jeg er Elise og jeg har jobbet som utvikler i åtte år, med
             mest fokus på frontend!
           </p>
           <h2>SOME</h2>
