Added an article

--- a/articles.html
+++ b/articles.html
@@ -181,6 +181,13 @@
           <h3>Faglig</h3>
           <ul>
             <li>
+              Kode24 - 2025:
+              <a
+                href="https://www.kode24.no/artikkel/kan-vi-plis-slutte-a-flexe-sa-mye/250616#hyvor-talk-view"
+                >Kan vi plis slutte å flex'e så mye?</a
+              >
+            </li>
+            <li>
               Digi - 2023:
               <a
                 href="https://www.digi.no/artikler/debatt-hodelos-bruk-av-kunstig-intelligens-er-uetisk/538080"
