Added NDC London to article page and added pdf

--- a/articles.html
+++ b/articles.html
@@ -435,7 +435,15 @@
               </a>
               <p><a href="presentations/skyteknologiuuherte40min.pdf">Last ned presentasjonen her</a></p>
             </li>
+            <li>
+              NDC London 2026:
+              <a href="https://ndclondon.com/agenda/lets-break-some-wcag-rules-0dft/0shbqs06jl8">
+                Let's Break Some WCAG Rules
+              </a>
+              <p><a href="presentations/letsbreaksomewcagrules.pdf">Last ned presentasjonen her</a></p>
+            </li>
           </ul>
+          
           <h3>Podcast</h3>
           <ul>
             <li>
