--- a/en/articles.html
+++ b/en/articles.html
@@ -415,6 +415,20 @@
                 Cloud Technology + Accessibility = ❤️ (20 min) (In norwegian)
               </a>
             </li>
+            <li>
+              Trondheim Developer Conferene 2025:
+              <a href="https://www.youtube.com/watch?v=3i54XV7CC1k&t=1657s">
+                Cloud Technology + Accessibility = ❤️ (40 min) (In norwegian)
+              </a>
+              <p><a href="../presentations/skyteknologiuuherte40min.pdf">Download the presentation</a></p>
+            </li>
+            <li>
+              NDC London 2026:
+              <a href="https://ndclondon.com/agenda/lets-break-some-wcag-rules-0dft/0shbqs06jl8">
+                Let's Break Some WCAG Rules
+              </a>
+              <p><a href="../presentations/letsbreaksomewcagrules.pdf">Download the presentation</a></p>
+            </li>
           </ul>
           <h3>Podcast</h3>
           <ul>
