Added bagde to pysj.party and more links

--- a/en/ting.html
+++ b/en/ting.html
@@ -204,6 +204,15 @@
             <li>
               <a href="https://90s-ai.vercel.app">90s-ai.vercel.app</a>
             </li>
+            <li>
+              <a href="https://pysj.party/">Pysj.party</a>
+            </li>
+            <li>
+              <a href="https://nonsense.fyi/">Nonsense.fyi</a>
+            </li>
+            <li>
+              <a href="https://roxedus.dev/">Roxedus.dev</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -218,6 +227,9 @@
           <script src="../frk-frontend-badge.js"></script>
           <norsk-programmering-badge></norsk-programmering-badge>
           <script src="../norsk-programmering-badge.js"></script>
+          <a href="https://pysj.party/" aria-label="Link to pysj.party">
+            <img style="max-width: 210px;" src="images/pysjpartybadge.png" alt="Pysj.party">
+          </a>
         </div>
       </div>
     </main>
