--- a/ting.html
+++ b/ting.html
@@ -208,6 +208,15 @@
             <li>
               <a href="https://mib.im/">mib.im</a>
             </li>
+            <li>
+              <a href="https://pysj.party/">Pysj.party</a>
+            </li>
+            <li>
+              <a href="https://nonsense.fyi/">Nonsense.fyi</a>
+            </li>
+            <li>
+              <a href="https://roxedus.dev/">Roxedus.dev</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -222,6 +231,9 @@
           <script src="frk-frontend-badge.js"></script>
           <norsk-programmering-badge></norsk-programmering-badge>
           <script src="norsk-programmering-badge.js"></script>
+          <a href="https://pysj.party/" aria-label="Link til pysj.party">
+            <img style="max-width: 210px;" src="images/pysjpartybadge.png" alt="Pysj.party">
+          </a>
         </div>
       </div>
     </main>
