--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
   <head>
     <meta charset="utf-8" />
     <title>Elises side</title>
@@ -148,30 +148,32 @@
         >
       </div>
     </div>
-    <header class="homepage__header window window--pink">
-      <div class="window__top window__top--purple">
-        <button class="window__close-button" aria-label="Lukk modal">✖</button>
-      </div>
-      <div class="window__content window__content--big">
-        <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
-      </div>
-    </header>
-    <div class="window window--white window--small easter-egg-button-div">
-      <div class="window__top window__top--pink">
-        <button class="window__close-button" aria-label="Lukk modal">✖</button>
-      </div>
-      <div class="window__content">
-        <div
-          class="easter-egg-button action-button action-button--pink"
-          aria-label="Klikk for å åpne et vindu med et bilde"
-        >
-          <button class="action-button__content" id="easter-egg-button">
-            🐣
-          </button>
+    <main>
+      <header class="homepage__header window window--pink">
+        <div class="window__top window__top--purple">
+          <button class="window__close-button" aria-label="Lukk modal">✖</button>
+        </div>
+        <div class="window__content window__content--big">
+          <h1 class="homepage__title">Velkommen til Elises side 🦄</h1>
+        </div>
+      </header>
+      <div class="window window--white window--small easter-egg-button-div">
+        <div class="window__top window__top--pink">
+          <button class="window__close-button" aria-label="Lukk modal">✖</button>
+        </div>
+        <div class="window__content">
+          <div
+            class="easter-egg-button action-button action-button--pink"
+            aria-label="Klikk for å åpne et vindu med et bilde"
+          >
+            <button class="action-button__content" id="easter-egg-button">
+              🐣
+            </button>
+          </div>
         </div>
       </div>
-    </div>
-
+    </main>
+    
     <div class="homepage__header window window--white" id="easter-egg">
       <div class="window__top window__top--pink">
         <button class="window__close-button" aria-label="Lukk modal">✖</button>
