Added Julians badge

--- a/en/ting.html
+++ b/en/ting.html
@@ -228,7 +228,10 @@
           <norsk-programmering-badge></norsk-programmering-badge>
           <script src="../norsk-programmering-badge.js"></script>
           <a href="https://pysj.party/" aria-label="Link to pysj.party">
-            <img style="max-width: 210px;" src="images/pysjpartybadge.png" alt="Pysj.party">
+            <img style="max-width: 210px;" src="../images/pysjpartybadge.png" alt="Pysj.party">
+          </a>
+          <a href="https://andanti.no/" target="_blank" style="display: block;" aria-label="Link til Julians verdsvevstad">
+            <img style="max-width: 210px;" src="https://andanti.no/.not-well-known/badge.png" alt="Julian's verdsvevstad">
           </a>
         </div>
       </div>
