--- a/ting.html
+++ b/ting.html
@@ -231,8 +231,11 @@
           <script src="frk-frontend-badge.js"></script>
           <norsk-programmering-badge></norsk-programmering-badge>
           <script src="norsk-programmering-badge.js"></script>
-          <a href="https://pysj.party/" aria-label="Link til pysj.party">
+          <a href="https://pysj.party/" style="display: block;" aria-label="Link til pysj.party">
             <img style="max-width: 210px;" src="images/pysjpartybadge.png" alt="Pysj.party">
+          </a>
+          <a href="https://andanti.no/" target="_blank" style="display: block;" aria-label="Link til Julians verdsvevstad">
+            <img style="max-width: 210px;" src="https://andanti.no/.not-well-known/badge.png" alt="Julian's verdsvevstad">
           </a>
         </div>
       </div>
