Added another badge

--- a/en/ting.html
+++ b/en/ting.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -233,6 +234,8 @@
           <a href="https://andanti.no/" target="_blank" style="display: block;" aria-label="Link til Julians verdsvevstad">
             <img style="max-width: 210px;" src="https://andanti.no/.not-well-known/badge.png" alt="Julian's verdsvevstad">
           </a>
+          <augustg-dev-badge></augustg-dev-badge>
+          <script src="../augustg-dev-badge.js"></script>
         </div>
       </div>
     </main>
