--- a/en/ting.html
+++ b/en/ting.html
@@ -236,6 +236,8 @@
           </a>
           <augustg-dev-badge></augustg-dev-badge>
           <script src="../augustg-dev-badge.js"></script>
+          <wiigen-badge></wiigen-badge>
+          <script src="../wiigen-badge.js"></script>
         </div>
       </div>
     </main>
