New picture to website

--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
             <button class="window__close-button" aria-label="Lukk modal">✖</button>
           </div>
           <div class="window__content">
-            <img src="bilde_av_meg.jpg" alt="Bilde av meg" />
+            <img src="/images/bilde_av_meg_1.jpg" alt="Bilde av meg" />
           </div>
         </div>
       </div>
