--- a/en/about.html
+++ b/en/about.html
@@ -224,7 +224,7 @@
             <button class="window__close-button" aria-label="Close modal">✖</button>
           </div>
           <div class="window__content">
-            <img src="../bilde_av_meg.jpg" alt="Image of me" />
+            <img src="../images/bilde_av_meg_1.jpg" alt="Image of me" />
           </div>
         </div>
       </div>
