Added link til mafioso

--- a/ting.html
+++ b/ting.html
@@ -218,6 +218,9 @@
             <li>
               <a href="https://roxedus.dev/">Roxedus.dev</a>
             </li>
+            <li>
+              <a href="https://mafioso.no">Mafioso.no</a>
+            </li>
           </ul>
         </div>
       </div>
