--- a/en/ting.html
+++ b/en/ting.html
@@ -214,6 +214,9 @@
             <li>
               <a href="https://roxedus.dev/">Roxedus.dev</a>
             </li>
+            <li>
+              <a href="https://mafioso.no">Mafioso.no</a>
+            </li>
           </ul>
         </div>
       </div>
