--- a/ting.html
+++ b/ting.html
@@ -219,7 +219,7 @@
               <a href="https://roxedus.dev/">Roxedus.dev</a>
             </li>
             <li>
-              <a href="https://mafioso.no">Mafioso.no</a>
+              <a href="https://mafioso.no/register.php?ref=Kingkung">Mafioso.no</a>
             </li>
           </ul>
         </div>
