--- a/en/about.html
+++ b/en/about.html
@@ -40,7 +40,7 @@
     <script src="script_en.js"></script>
   </head>
   <body class="about">
-    <div class="clouds">
+    <div class="clouds" aria-hidden="true" role="presentation">
       <div class="cloud__container">
         <div class="cloud cloud--1"></div>
       </div>
@@ -66,7 +66,7 @@
         <div class="cloud cloud--8"></div>
       </div>
     </div>
-    <div class="stars">
+    <div class="stars" aria-hidden="true" role="presentation">
       <div class="star__container">
         <div class="star star--1"></div>
       </div>
