--- a/en/articles.html
+++ b/en/articles.html
@@ -45,7 +45,7 @@
   </head>
   <body class="articles">
 
-    <div class="clouds">
+    <div class="clouds" aria-hidden="true" role="presentation">
       <div class="cloud__container">
         <div class="cloud cloud--1"></div>
       </div>
@@ -75,7 +75,7 @@
         <div class="cloud cloud--8"></div>
       </div>
     </div>
-    <div class="stars">
+    <div class="stars" aria-hidden="true" role="presentation">
       <div class="star__container">
         <div class="star star--1"></div>
       </div>
