--- a/en/ting.html
+++ b/en/ting.html
@@ -45,7 +45,7 @@
     <script src="script_en.js"></script>
   </head>
   <body class="articles">
-    <div class="clouds">
+    <div class="clouds" aria-hidden="true" role="presentation">
       <div class="cloud__container">
         <div class="cloud cloud--1"></div>
       </div>
@@ -71,7 +71,7 @@
         <div class="cloud cloud--8"></div>
       </div>
     </div>
-    <div class="stars">
+    <div class="stars" aria-hidden="true" role="presentation">
       <div class="star__container">
         <div class="star star--1"></div>
       </div>
