--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       href="images/favicon/favicon-16x16.png"
     />
     <script src="script.js"></script>
-    <script src="script_no.js"></script>
+    <script src="script_theme.js"></script>
   </head>
   <body class="about">
     <div class="clouds" aria-hidden="true" role="presentation">
