--- a/en/about.html
+++ b/en/about.html
@@ -37,7 +37,7 @@
       href="../images/favicon/favicon-16x16.png"
     />
     <script src="../script.js"></script>
-    <script src="script_en.js"></script>
+    <script src="../script_theme.js"></script>
   </head>
   <body class="about">
     <div class="clouds" aria-hidden="true" role="presentation">
