--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
       href="../images/favicon/favicon-16x16.png"
     />
     <script src="../script.js"></script>
-    <script src="script_en.js"></script>
+    <script src="../script_theme.js"></script>
   </head>
   <body>
     <div class="clouds" aria-hidden="true" role="presentation">
