--- a/en/ting.html
+++ b/en/ting.html
@@ -42,7 +42,7 @@
       href="../images/favicon/favicon-16x16.png"
     />
     <script src="../script.js"></script>
-    <script src="script_en.js"></script>
+    <script src="../script_theme.js"></script>
   </head>
   <body class="articles">
     <div class="clouds" aria-hidden="true" role="presentation">
