Added Booster to presentation list

--- a/articles.html
+++ b/articles.html
@@ -437,10 +437,17 @@
             </li>
             <li>
               NDC London 2026:
-              <a href="https://ndclondon.com/agenda/lets-break-some-wcag-rules-0dft/0shbqs06jl8">
-                Let's Break Some WCAG Rules
+              <a href="https://www.youtube.com/watch?v=7oMQ1H9uPRI">
+                Let's Break Some WCAG Rules (60 min)
               </a>
               <p><a href="presentations/letsbreaksomewcagrules.pdf">Last ned presentasjonen her</a></p>
+            </li>
+            <li>
+              Booster 2026:
+              <a href="https://www.boosterconf.no/2026/program/thursday/7_lightning_talks/kongesalen_1/reckless-use-of-ai-is-unethical/">
+                Reckless use of AI is unethical (10 min)
+              </a>
+              <p><a href="presentations/RecklessuseofAIisunethical.pdf">Last ned presentasjonen her</a></p>
             </li>
           </ul>
           
