--- a/en/articles.html
+++ b/en/articles.html
@@ -424,10 +424,17 @@
             </li>
             <li>
               NDC London 2026:
-              <a href="https://ndclondon.com/agenda/lets-break-some-wcag-rules-0dft/0shbqs06jl8">
+              <a href="https://www.youtube.com/watch?v=7oMQ1H9uPRI&t=108s">
                 Let's Break Some WCAG Rules
               </a>
               <p><a href="../presentations/letsbreaksomewcagrules.pdf">Download the presentation</a></p>
+            </li>
+            <li>
+              Booster 2026:
+              <a href="https://www.boosterconf.no/2026/program/thursday/7_lightning_talks/kongesalen_1/reckless-use-of-ai-is-unethical/">
+                Reckless use of AI is unethical (10 min)
+              </a>
+              <p><a href="../presentations/RecklessuseofAIisunethical.pdf">Download the presentation</a></p>
             </li>
           </ul>
           <h3>Podcast</h3>
